--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <div class="timeline-date month">November</div>
 
                       <div class="timeline-content">
-                        <p>Kausik Lakkaraju, Rachneet Kaur, Sunandita Patra, and Biplav Srivastava will presented a tutorial on <a href="https://sites.google.com/view/raasta2024icaif/" target="_blank">Evaluating and Rating AI Systems for Trust and Its Application to Finance</a> at the <a href="https://ai-finance.org/" target="_blank">5th ACM International Conference on AI in Finance (ICAIF-24)</a>, New York, USA, Nov 2024.</p>
+                        <p>Kausik Lakkaraju, Rachneet Kaur, Sunandita Patra, and Biplav Srivastava will present a tutorial on <a href="https://sites.google.com/view/raasta2024icaif/" target="_blank">Evaluating and Rating AI Systems for Trust and Its Application to Finance</a> at the <a href="https://ai-finance.org/" target="_blank">5th ACM International Conference on AI in Finance (ICAIF-24)</a>, New York, USA, Nov 2024.</p>
                       </div>
                     </div>
 
