added neurips Poster

--- a/index.html
+++ b/index.html
@@ -198,6 +198,14 @@
                   <div class="slideshow-container">
                     <div class="research-spotlight research-spotlight-slide">
                       <h3 class="spotlight-title">🔍 Research Spotlight</h3>
+                      <a href="spotlight/NeurIPS-24-Poster.png" target="_blank">
+                        <img src="spotlight/NeurIPS-24-Poster.png" alt="Research Poster Thumbnail"
+                          class="poster-thumbnail">
+                      </a>
+                    </div>
+
+                    <div class="research-spotlight research-spotlight-slide">
+                      <h3 class="spotlight-title">🔍 Research Spotlight</h3>
                       <a href="spotlight/group_recommendation.jpg" target="_blank">
                         <img src="spotlight/group_recommendation.jpg" alt="Research Poster Thumbnail"
                           class="poster-thumbnail">
