--- a/publications/index.html
+++ b/publications/index.html
@@ -116,6 +116,7 @@
                                 Bharath Muppasani, Protik Nag, Vignesh Narayanan, Biplav Srivastava and Michael N. Huhns
                                 <br>
                                 <a href='https://openreview.net/forum?id=LYivxMp5es' target="_blank">[Paper]</a>
+                                <a href="../spotlight/NeurIPS-24-Poster.png" target="_blank">[Poster]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Dynamical Systems</span>
                                 <span class="tag tag-method">Automated Planning</span>
