--- a/projects/chatbots_page/elections_2024.html
+++ b/projects/chatbots_page/elections_2024.html
@@ -77,6 +77,7 @@
           <ul>
             <li>A Vision for Reinventing Credible Elections with Artificial Intelligence | 2024 <br>
               <i><b>Authors: </b>Biplav Srivastava</i> <br>
+              Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Senior Member paper, 2025 <br>
               <a href='http://dx.doi.org/10.13140/RG.2.2.13700.13443' target="_blank">[Paper]</a>
             </li>
             <br>
