--- a/publications/index.html
+++ b/publications/index.html
@@ -86,6 +86,16 @@
                         <h2>2024</h2>
                         <ul class="papers-list">
 
+                             <li><b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b>
+                                </i><br>
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
+                                 Biplav Srivastava
+                                <br>
+                                <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Conference</span>
+                                <span class="tag tag-method">Elections</span>
+                                <br>
+                            
                             <li><b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data</b>
                                 </i><br>
                                 <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
