--- a/publications/index.html
+++ b/publications/index.html
@@ -83,7 +83,7 @@
 
                     <section class="papers-by-year">
 
-                        <h2>2024</h2>
+                        <h2>2025</h2>
                         <ul class="papers-list">
 
                              <li><b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b>
@@ -106,6 +106,10 @@
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Traffic</span>
                                 <br>
+                        </ul>
+
+                        <h2>2024</h2>
+                        <ul class="papers-list">
 
                             <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</b>
                                 </i><br>
