--- a/index.html
+++ b/index.html
@@ -125,6 +125,14 @@
                       <div class="timeline-content">
                         <p>Kausik Lakkaraju, Rachneet Kaur, Sunandita Patra, and Biplav Srivastava will present a tutorial on <a href="https://sites.google.com/view/raasta2024icaif/" target="_blank">Evaluating and Rating AI Systems for Trust and Its Application to Finance</a> at the <a href="https://ai-finance.org/" target="_blank">5th ACM International Conference on AI in Finance (ICAIF-24)</a>, New York, USA, Nov 2024.</p>
                       </div>
+
+
+                      <div class="timeline-content">
+                        <p>Our <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
+                          target="_blank">paper</a>, 'A Vision for Reinventing Credible Elections with Artificial Intelligence' is accepted in the <a href="https://aaai.org/conference/aaai/aaai-25/" target="_blank">AAAI-25</a> Senior Member Program</a>.
+                        </p>
+                      </div>
+
                     </div>
 
                     <!-- Oct 2024 -->
