--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -210,7 +210,8 @@
                 <li>[2024] AI-Assisted Research Collaboration with Open Data for Fair and Effective
                   Response to Call for Proposals
                   <br><i>AAAI AI Magazine</i><br>
-                  <a href="https://arxiv.org/abs/2309.09404" target="_blank"><b>[Paper - coming soon]</b></a>
+                  <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/aaai.12203"
+                    target="_blank"><b>[Paper]</b></a>
                   <br><br>
                 </li>
 
