Nitin profile picture update

--- a/members/index.html
+++ b/members/index.html
@@ -174,7 +174,7 @@
                             <br><br>
                         </figcaption>
 
-                        <img src="images_members/nitin.jpeg">
+                        <img src="images_members/nitin.jpg">
                         <figcaption style="padding-top: -10%;">
                             <b>Nitin Gupta</b><br><br>
                             <a target="_blank" href="https://www.linkedin.com/in/niting9/">Homepage</a>,
