--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -87,7 +87,7 @@
                 </li>
             
             <li>Understanding the Capabilities of Large Language Models for Automated Planning <br>
-              <i>Preprint</i> <br>
+              <i>Preprint, 2023 </i> <br>
               <a href="https://arxiv.org/abs/2305.16151" target="_blank"><b>[Paper]</b></a>
               <a href="./bib/understanding.txt" target="_blank" type="text/plain"><b>[BibTex]</b></a>
             </li>
