--- a/projects/generalized_planning/index.html
+++ b/projects/generalized_planning/index.html
@@ -81,7 +81,7 @@
             
             <li>The Case for Developing a Foundation Model for Planning-like Tasks from
                                     Scratch<br>
-                                <i>Planning and Reinforcement Learning (PRL) Workshop at ICAPS 2024</i><br>
+                                <i>Planning and Reinforcement Learning (PRL) Workshop at ICAPS, 2024</i><br>
                                 <a href='https://arxiv.org/abs/2404.04540' target="_blank">[Paper]</a>
                                 <br>
                 </li>
