--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@
 
 
                       <div class="timeline-content">
-                        <p>Our <a href=''
+                        <p>Our <a href='publications/papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf'
                           target="_blank">paper</a>, 'On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI Dialog States and Beliefs' is accepted in the AAAI-25 <a href="https://aair-lab.github.io/genplan25/">Generalization in Planning Workshop</a>.
                         </p>
                       </div>
 
                       <div class="timeline-content">
-                        <p>Our <a href='https://www.researchgate.net/publication/384690057_ElectionBot-SC_A_Tool_to_Understand_and_Compare_Chatbot_Behavior_for_Safe_Election_Information_in_South_Carolina'
+                        <p>Our <a href='publications/papers_local/AAAI_25_SafeChat_Workshop.pdf'
                           target="_blank">paper</a>, 'Disseminating Authentic Public Messages using Chatbots - A Case Study with ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election Information in South Carolina' is accepted in the AAAI-25 <a href="https://sites.google.com/view/ai-public-missions-workshop">AI for Public Missions Workshop</a>.
                         </p>
                       </div>
