--- a/publications/index.html
+++ b/publications/index.html
@@ -85,6 +85,28 @@
 
                         <h2>2025</h2>
                         <ul class="papers-list">
+                          <li><b>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI Dialog States and Beliefs</b>
+                              </i><br>
+                              <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
+                              Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
+                              <br>
+                              <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
+                              <span class="tag tag-type">Workshop</span>
+                              <span class="tag tag-method">Automated Planning</span>
+                              <!-- <span class="tag tag-domain">Elections</span> -->
+                              <br>
+
+                          <li><b>Disseminating Authentic Public Messages using Chatbots - A Case Study with ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election Information in South Carolina</b>
+                              </i><br>
+                              <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
+                              Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav Srivastava
+                              <br>
+                              <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
+                              <span class="tag tag-type">Workshop</span>
+                              <span class="tag tag-method">Chatbots</span>
+                              <span class="tag tag-domain">Elections</span>
+                              <br>
+
 
                              <li><b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b>
                                 </i><br>
