--- a/projects/group_rec/index.html
+++ b/projects/group_rec/index.html
@@ -377,6 +377,13 @@
               </p>
               <p><i><b>Representative Publications</b></i></p>
               <ul style="padding-left:2.5%;width:100%;vertical-align:middle">
+                <li>[2024] A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
+                  Recommendations and Reasoning on Multimodal Recipes and its Implementation in BEACON<br>
+                  <i>Arxiv Preprint</i><br>
+                  <a href="https://arxiv.org/abs/2412.17910" target="_blank"><b>[Paper]</b></a>
+                  <a href="./bib/beacon-part2.bib" target="_blank" type="text/plain"><b>[BibTex]</b></a>
+                  <br>
+                </li>
                 <li>[2024] BEACON: Balancing Convenience and Nutrition in Meals With Long-Term Group Recommendations and
                   Reasoning on Multimodal Recipes<br>
                   <i>Arxiv Preprint</i><br>
