--- a/publications/index.html
+++ b/publications/index.html
@@ -85,45 +85,58 @@
 
                         <h2>2025</h2>
                         <ul class="papers-list">
-                          <li><b>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI Dialog States and Beliefs</b>
-                              </i><br>
-                              <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
-                              Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
-                              <br>
-                              <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
-                              <span class="tag tag-type">Workshop</span>
-                              <span class="tag tag-method">Automated Planning</span>
-                              <!-- <span class="tag tag-domain">Elections</span> -->
-                              <br>
-
-                          <li><b>Disseminating Authentic Public Messages using Chatbots - A Case Study with ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election Information in South Carolina</b>
-                              </i><br>
-                              <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
-                              Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav Srivastava
-                              <br>
-                              <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
-                              <span class="tag tag-type">Workshop</span>
-                              <span class="tag tag-method">Chatbots</span>
-                              <span class="tag tag-domain">Elections</span>
-                              <br>
-
-
-                             <li><b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b>
+                            <li><b>On Generalized Planning for Controlling Opinion Networks: Interpreting Human-AI
+                                    Dialog States and Beliefs</b>
                                 </i><br>
-                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
-                                 Biplav Srivastava
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                    Feb 2025</i><br>
+                                Bharath Muppasani, Protik Nag, Biplav Srivastava, Vignesh Narayanan
                                 <br>
-                                <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true' target="_blank">[Paper]</a>
+                                <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Workshop</span>
+                                <span class="tag tag-method">Automated Planning</span>
+                                <!-- <span class="tag tag-domain">Elections</span> -->
+                                <br>
+
+                            <li><b>Disseminating Authentic Public Messages using Chatbots - A Case Study with
+                                    ElectionBot-SC to Understand and Compare Chatbot Behavior for Safe Election
+                                    Information in South Carolina</b>
+                                </i><br>
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                    Feb 2025</i><br>
+                                Nitin Gupta, Vansh Nagpal, Bharath Muppasani, Kausik Lakkaraju, Sara Jones, Biplav
+                                Srivastava
+                                <br>
+                                <a href='papers_local/AAAI_25_SafeChat_Workshop.pdf' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Workshop</span>
+                                <span class="tag tag-method">Chatbots</span>
+                                <span class="tag tag-domain">Elections</span>
+                                <br>
+
+
+                            <li><b>A Vision for Reinventing Credible Elections with Artificial Intelligence</b>
+                                </i><br>
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                    Feb 2025</i><br>
+                                Biplav Srivastava
+                                <br>
+                                <a href='https://www.researchgate.net/publication/384730907_A_Vision_for_Reinventing_Credible_Elections_with_Artificial_Intelligence?channel=doi&linkId=6705666a33ab504c04f54262&showFulltext=true'
+                                    target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Elections</span>
                                 <br>
-                            
-                            <li><b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and Driver-Education Data</b>
+
+                            <li><b>Towards Enhancing Road Safety in South Carolina Using Insights from Traffic and
+                                    Driver-Education Data</b>
                                 </i><br>
-                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA, Feb 2025</i><br>
-                                Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava, Lucas Vasconcelos
+                                <i>Thirty-Ninth AAAI Conference on Artificial Intelligence (AAAI-25), Philadelphia, USA,
+                                    Feb 2025</i><br>
+                                Nitin Gupta, Bharath Muppasani, Saina Srivastava, Aarohi Goel, Ross Hartfield, Todd
+                                Buehrig, Melissa Reck, Emma Kennedy, Kevin Poore, Karilyn Tremblay, Biplav Srivastava,
+                                Lucas Vasconcelos
                                 <br>
-                                <a href='https://www.researchgate.net/publication/385590927_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data' target="_blank">[Paper]</a>
+                                <a href='https://www.researchgate.net/publication/385590927_Towards_Enhancing_Road_Safety_in_South_Carolina_Using_Insights_from_Traffic_and_Driver-Education_Data'
+                                    target="_blank">[Paper]</a>
                                 <span class="tag tag-type">Conference</span>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Traffic</span>
@@ -133,10 +146,13 @@
                         <h2>2024</h2>
                         <ul class="papers-list">
 
-                            <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its Applications</b>
+                            <li><b>Building a Plan Ontology to Represent and Exploit Planning Knowledge and Its
+                                    Applications</b>
                                 </i><br>
-                                <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD '24), India, 2024.</i><br>
-                                Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju, Michael N. Huhns and Vignesh Narayanan
+                                <i>Eighth International Conference on Data Science and Management of Data (CODS-COMAD
+                                    '24), India, 2024.</i><br>
+                                Bharath Muppasani, Nitin Gupta, Vishal Pallagani, Biplav Srivastava, Raghava Mutharaju,
+                                Michael N. Huhns and Vignesh Narayanan
                                 <br>
                                 <a href='./papers_local/CODS_24_AI_Planning_Ontology.pdf' target="_blank">[Paper]</a>
                                 <a href="https://ai4society.github.io/planning-ontology/" target="_blank">[Website]</a>
@@ -158,6 +174,19 @@
                                 <span class="tag tag-method">Automated Planning</span>
                                 <br>
 
+                            <li><b>A Novel Approach to Balance Convenience and Nutrition in Meals With Long-Term Group
+                                    Recommendations and Reasoning on Multimodal Recipes and its Implementation in
+                                    BEACON</b>
+                                </i><br>
+                                Vansh Nagpal, Siva Likitha Valluru, Kausik Lakkaraju, Nitin Gupta, Zach Abdulrahman,
+                                Andrew Davison, Biplav Srivastava
+                                <br>
+                                <a href='https://arxiv.org/abs/2412.17910' target="_blank">[Paper]</a>
+                                <span class="tag tag-type">Preprint</span>
+                                <span class="tag tag-method">Data Analysis</span>
+                                <span class="tag tag-method">Recommender Systems</span>
+                                <br>
+
                             <li><b>AI-Assisted Research Collaboration with Open Data for Fair and Effective
                                     Response to Call for Proposals</b>
                                 </i><br>
@@ -165,7 +194,8 @@
                                 Siva Likitha Valluru, Michael Widener, Biplav Srivastava, Sriraam Natarajan, Sugata
                                 Gangopadhyay
                                 <br>
-                                <a href="https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203" target="_blank">[Paper]</a>
+                                <a href="https://onlinelibrary.wiley.com/doi/10.1002/aaai.12203"
+                                    target="_blank">[Paper]</a>
                                 <span class="tag tag-method">Data Analysis</span>
                                 <span class="tag tag-method">Recommender Systems</span>
                                 <br>
@@ -298,7 +328,8 @@
                         <h2>2023</h2>
                         <ul class="papers-list">
 
-                            <li><b>Building and Using a Planning Ontology from Past Data for Performance Efficiency</b><br>
+                            <li><b>Building and Using a Planning Ontology from Past Data for Performance
+                                    Efficiency</b><br>
                                 <i>Planning and Ontology Workshop (PLATO), ICAPS 2023, Prague, CZ</i><br>
                                 Bharath Muppasani, Vishal Pallagani, Biplav Srivastava and Raghava Mutharaju<br>
                                 <a href='https://ceur-ws.org/Vol-3493/short-paper-2.pdf' target="_blank">[Paper]</a>
