--- a/funding/index.html
+++ b/funding/index.html
@@ -50,9 +50,9 @@
                     <li> CISCO research award, <!-- $80K, --> 2022-2023, Rating AI for Trust [AI Ethics, Testing] 
                              <span class="tag tag-fund-type">Gift</span>
                              <span class="tag tag-fund-source">Corporate</span> </il>
-                    <li> University of South Carolina, <!-- $50K, --> 2021-2024, AI-driven team recommendation [AI,Teaming] </il>
-                    <li> South Carolina Research Authority, <!-- $15K, --> 2022-2023, AI-driven team recommendation [AI, Teaming] </il>
-                    <li> Vajra visiting faculty fellowship (India), <!-- $35K, --> 2021-2023, Rating AI and Indian perspective [AI Ethics, Testing, Food] </il>
+                    <li> University of South Carolina, <!-- $50K, --> 2021-2024, AI-driven team recommendation [AI,Teaming] <span class="tag tag-government-source">Government</span></il>
+                    <li> South Carolina Research Authority, <!-- $15K, --> 2022-2023, AI-driven team recommendation [AI, Teaming] <span class="tag tag-government-source">Government</span></il>
+                    <li> Vajra visiting faculty fellowship (India), <!-- $35K, --> 2021-2023, Rating AI and Indian perspective [AI Ethics, Testing, Food] <span class="tag tag-government-source">Government</span></il>
                     <li> Tantiv4, <!-- $112K, --> 2021-2022, AI for power management and middleware, conversation systems [AI, Power, Chatbots] 
                          <span class="tag tag-fund-source">Corporate</span> </il>
                 </ul>
@@ -60,10 +60,10 @@
                 <!-- As Co-Principal Investigator (Co-PI) -->
                 <h3>As Co-Principal Investigator (Co-PI)</h3>
                 <ul class="funding-list co-pi-list">
-                    <li>DoD/ARLIS INSURE, Information Competition Simulator<!-- , $159,836 -->; May 2022 - Apr 2024, Michael N. Huhns (PI), Vignesh Narayanan, Biplav Srivastava [Information Spread, AI Security] </il>
-                    <li>University of South Carolina (Racial Justice), <!-- $14,636, --> February 1, 2022 - April 30, 2023, Intersectionality between race, gender, and computer science stereotypes influencing racially minoritized high schoolers’ intentions to pursue computer science major, Team: Lima de Vasconcelos (PI), Fatih Ari, Biplav Srivastava [AI, Stereotypes, Racial Issues] </il>
-                    <li>University of South Carolina (Racial Justice), <!-- $14,978, --> February 1, 2022 - April 30, 2023, Understanding racial justice with data visualizations: Fostering underrepresented minority secondary school students’ critical data literacy, Team: Hengtao Tang (PI), Forest Agostinelli, Biplav Srivatava [AI, Visualization, Racial Issues] </il>
-                    <li>University of South Carolina (ASPIRE-II), <!-- $98,535, --> 2021-2022, Collaborative Artificial Intelligence for Learning to Solve the Rubik’s Cube, Team: Matt Irvin (PI), Forest Agostinelli. Biplav Srivastava, Dezhi Wu, Hengtao Tang, Amit Sheth (Consultant) [Chatbots, Games, AI Trust] </il>
+                    <li>DoD/ARLIS INSURE, Information Competition Simulator<!-- , $159,836 -->; May 2022 - Apr 2024, Michael N. Huhns (PI), Vignesh Narayanan, Biplav Srivastava [Information Spread, AI Security] <span class="tag tag-government-source">Government</span></il>
+                    <li>University of South Carolina (Racial Justice), <!-- $14,636, --> February 1, 2022 - April 30, 2023, Intersectionality between race, gender, and computer science stereotypes influencing racially minoritized high schoolers’ intentions to pursue computer science major, Team: Lima de Vasconcelos (PI), Fatih Ari, Biplav Srivastava [AI, Stereotypes, Racial Issues] <span class="tag tag-government-source">Government</span></il>
+                    <li>University of South Carolina (Racial Justice), <!-- $14,978, --> February 1, 2022 - April 30, 2023, Understanding racial justice with data visualizations: Fostering underrepresented minority secondary school students’ critical data literacy, Team: Hengtao Tang (PI), Forest Agostinelli, Biplav Srivatava [AI, Visualization, Racial Issues] <span class="tag tag-government-source">Government</span></il>
+                    <li>University of South Carolina (ASPIRE-II), <!-- $98,535, --> 2021-2022, Collaborative Artificial Intelligence for Learning to Solve the Rubik’s Cube, Team: Matt Irvin (PI), Forest Agostinelli. Biplav Srivastava, Dezhi Wu, Hengtao Tang, Amit Sheth (Consultant) [Chatbots, Games, AI Trust] <span class="tag tag-government-source">Government</span></il>
                 </ul>
 
                 <!-- Select Collaborations (Non-monetary) -->
