--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                     <div class="mySlides">
                       <img src="images/team_lunch_spring2025.jpg" style="width:100%">
-                      <div class="caption">Team Lunch - Summer '25</div>
+                      <div class="caption">Team Lunch - Spring '25</div>
                     </div>
 
                     <div class="mySlides">
