--- a/index.html
+++ b/index.html
@@ -110,6 +110,23 @@
                       <div class="timeline-date year">2025</div>
                     </div>
 
+                    <!-- Feb 2025 -->
+                    <div class="timeline-item">
+                      <div class="timeline-dot"></div>
+                      <div class="timeline-date month">February</div>
+
+
+                      <div class="timeline-content">
+                        <p>Our <a href='https://drive.google.com/file/d/1ErR1xT7ftvmHiUyYrdUbjyd4qCK_FxKX/view?usp=sharing'
+                          target="_blank">point of view (POV)</a>, on DeepSeek R1, the new AI Large Language Model (LLM) from 
+                          <a href="https://www.deepseek.com/">DeepSeek</a> (Feb 2, 2025).
+                        </p>
+                      </div>
+
+
+                    </div>                    
+                    <!-- End of Feb 2025 -->
+                    
                     <!-- Jan 2025 -->
                     <div class="timeline-item">
                       <div class="timeline-dot"></div>
@@ -130,7 +147,7 @@
 
                     </div>                    
 
-
+                    <!-- End of Jan 2025 -->
 
                   </div>
 
