changes to ChatBot page

--- a/projects/chatbots_page/index.html
+++ b/projects/chatbots_page/index.html
@@ -42,6 +42,11 @@
                 2024!</b>
             </a>
             See demo and participate in user studies.
+            <br>
+            <!-- <mark style="color:red;"><b>!!!</b></mark> -->
+            <a href="https://github.com/ai4society/trustworthy-chatbot" target="_blank" style="text-decoration: none;" >
+              <b>Use our SafeChat framework from our GitHub repository </b>
+            </a>
           </p>
 
           <p style="text-align: justify;"><span
