--- a/activities/index.html
+++ b/activities/index.html
@@ -165,6 +165,7 @@
                           <h2 class="activities-type">Workshops & Symposia</h2>
                         </div>
 
+                        <!-- New entry - comment begin
                         <div class="activities-item">
                           <div class="activities-year">2025</div>
                           
@@ -177,15 +178,9 @@
                             </p>
                           </div>
 
-                          <div class="activities-content">
-                            <p>
-                              <span class="activities-content-title">Workshop (39th) on <a href="https://sites.google.com/view/ai-public-missions-workshop" target="_blank">AI for Public Missions</a></span><br>
-                              <span class="activities-content-event">39th Conference of Association for Advancement of Artificial Intelligence (<a href="https://aaai.org/aaai-conference/" target="_blank">AAAI-25</a>)</span><br>
-                              <span class="activities-content-members">Nitin Gupta, Vansh Nagpal, Bharath Chandra Muppasani, Kausik Lakkaraju, Sara Rae Jones, Biplav Srivastava</span><br>
-                              <span class="activities-content-month">January</span>
-                            </p>
-                          </div>
-                        </div>
+                        </div> 
+                       Comment end -->
+                        
 
                         <div class="activities-item">
                           <div class="activities-year">2024</div>
