--- a/index.html
+++ b/index.html
@@ -153,6 +153,13 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">January</div>
 
+                      <div class="timeline-content">
+                        <p> A new funding recieved - <a href='https://www.nsf.gov/awardsearch/showAward?AWD_ID=2454027&HistoricalAwards=false'
+                          target="_blank">NSF (EAGER) NAIRR Pilot: Demonstrating a Compact Foundation Model for Planning-Like(PL) Tasks for Next Generation Trusted Applications</a>, 
+                          on Large Language Models and Planning.
+                        </p>
+                      </div>
+
 
                       <div class="timeline-content">
                         <p>Our <a href='publications/papers_local/AAAI_25_Opinion_Dynamics_formulation_for_Dialog_Management.pdf'
