--- a/index.html
+++ b/index.html
@@ -136,7 +136,16 @@
                       <div class="timeline-dot"></div>
                       <div class="timeline-date month">February</div>
 
+                      <div class="timeline-content">
+                        <p>A prestigious recognition (<a href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
+                          target="_blank">VAIBHAV</a>) received for work in summer with <a href="https://iitbhu.ac.in/">IIT-BHU</a> on using AI and sensors 
+                          for recommending and monitoring Yoga asanas; was 1 among 17 selected from 216 competing globally 
+                           (2025-2028).
+                        </p>
+                      </div>
 
+
+                      
                       <div class="timeline-content">
                         <p>Our <a href='https://drive.google.com/file/d/1ErR1xT7ftvmHiUyYrdUbjyd4qCK_FxKX/view?usp=sharing'
                           target="_blank">point of view (POV)</a>, on DeepSeek R1, the new AI Large Language Model (LLM) from 
