--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
                       <div class="timeline-date month">February</div>
 
                       <div class="timeline-content">
-                        <p>A prestigious recognition (<a href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
-                          target="_blank">VAIBHAV</a>) received for work in summer with <a href="https://iitbhu.ac.in/">IIT-BHU</a> on using AI and sensors 
+                        <p>A prestigious recognition (VAIBHAV - <a href='https://dst.gov.in/prize/announcement-results-2nd-cycle-first-call-vaibhav-fellowships'
+                          target="_blank">announcement</a>) received for work in summer with <a href="https://iitbhu.ac.in/">IIT-BHU</a> on using AI and sensors 
                           for recommending and monitoring Yoga asanas; was 1 among 17 selected from 216 competing globally 
                            (2025-2028).
                         </p>
